# sourdough-tracker

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  starter_log.xlsx
src/sourdough_tracker/: commands.py  main.py
src/sourdough_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
